# cartograph-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  fresh-install.yml  pypi-publish.yml
cartograph_mcp/: __init__.py  bridge.py  server.py
cg/backend_json_rpc_subprocess_python/: widget.json
cg/backend_json_rpc_subprocess_python/examples/: example_usage.py
cg/backend_json_rpc_subprocess_python/src/: json_rpc_subprocess.py
cg/backend_json_rpc_subprocess_python/tests/: test_json_rpc_subprocess.py
cg/backend_mcp_server_bridge_python/: widget.json
cg/backend_mcp_server_bridge_python/examples/: example_usage.py
cg/backend_mcp_server_bridge_python/src/: mcp_server_bridge.py
cg/backend_mcp_server_bridge_python/tests/: test_mcp_server_bridge.py
tests/: test_server.py  test_server_integration.py
